SpaceInvadersCollisionVisitor